# mata_lazy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: mata_lazyConfig.cmake.in
examples/: CMakeLists.txt  example07-lazy-language-inclusion.cc  example08-lazy-inductive-invariant-model-checking.cc
include/: mata_lazy.hh
src/: lazy.cc
src/lazy/: alphabet_store.cc  alphabet_store.hh  emptiness.cc  emptiness.hh  iterators.cc  iterators.hh  macrostate_store.cc  macrostate_store.hh  reconstruction.cc  reconstruction.hh  state_types.hh  subsumption.cc  subsumption.hh  validation.cc  validation.hh
tests/: CMakeLists.txt  lazy_contract.cc  lazy_semantics.cc
